helloworld/tools-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool
  namespace: java2days
spec:
  containers:
    - name: multitool
      image: praqma/network-multitool
      ports:
        - containerPort: 80
          name: server-port
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 15
        timeoutSeconds: 3
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 15
        timeoutSeconds: 3
